--- a/page.html
+++ b/page.html
@@ -1,3 +1,3 @@
 <li class="page-item">
-    <a class="page-link" href="#" onclick='page({j},"#content", "post.html")'>{i}</a>
+    <a class="page-link" href="#" onclick='page({j},"#content", "https://raw.githubusercontent.com/dimasoppo448/sampel/master/page.html")'>{i}</a>
 </li>
